Support Railway MySQL env variables

--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ DB_PASSWORD=123vagav
 DB_NAME=ar_shooter
 
 # CORS (разрешённые источники)
-ALLOWED_ORIGINS=http://localhost:3001,http://127.0.0.1:5500
+ALLOWED_ORIGINS=http://localhost:3001,http://127.0.0.1:5500,vahagn-game-shuter-v-1-0-1.onrender.com
 
 BOT_TOKEN=8132842106:AAHkUTfkBHca5_wKiuH4ogPfJe39kT1HO5w
 
