--- a/server/.env
+++ b/server/.env
@@ -1,15 +1,26 @@
 PORT=3001
-NODE_ENV=development
+# NODE_ENV=development
+NODE_ENV=production
 
 # База данных MySQL
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=123vagav
-DB_NAME=ar_shooter
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_USER=root
+# DB_PASSWORD=123vagav
+# DB_NAME=ar_shooter
+
+MYSQL_DATABASE=railway
+MYSQL_PUBLIC_URL=mysql://root:aCbisAgJblkPLtgEjwBFLeYshOFVIwit@ballast.proxy.rlwy.net:51524/railway
+MYSQL_ROOT_PASSWORD=aCbisAgJblkPLtgEjwBFLeYshOFVIwit
+MYSQL_URL=mysql://root:aCbisAgJblkPLtgEjwBFLeYshOFVIwit@mysql.railway.internal:3306/railway
+MYSQLDATABASE=railway
+MYSQLHOST=ballast.proxy.rlwy.net
+MYSQLPASSWORD=aCbisAgJblkPLtgEjwBFLeYshOFVIwit
+MYSQLPORT=51524
+MYSQLUSER=root
 
 # CORS (разрешённые источники)
-ALLOWED_ORIGINS=http://localhost:3001,http://127.0.0.1:5500,vahagn-game-shuter-v-1-0-1.onrender.com
+ALLOWED_ORIGINS=http://localhost:3001,http://127.0.0.1:5500,https://vahagn-game-shuter-v-1-0-1.onrender.com
 
 BOT_TOKEN=8132842106:AAHkUTfkBHca5_wKiuH4ogPfJe39kT1HO5w
 
