--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,9 @@ PORT=3001
 # NODE_ENV=development
 NODE_ENV=production
 
+TELEGRAM_LOG_ENABLED=true
+TELEGRAM_LOG_CHAT_ID=1190709922
+
 # База данных MySQL
 # DB_HOST=localhost
 # DB_PORT=3306
