--- a/server/.env
+++ b/server/.env
@@ -14,9 +14,9 @@ MYSQL_PUBLIC_URL=mysql://root:SUEmtONCNxTWlHYJCKqGjcqpwYYvoErA@shuttle.proxy.rlw
 MYSQL_ROOT_PASSWORD=SUEmtONCNxTWlHYJCKqGjcqpwYYvoErA
 MYSQL_URL=mysql://root:SUEmtONCNxTWlHYJCKqGjcqpwYYvoErA@mysql.railway.internal:3306/railway
 MYSQLDATABASE=railway
-MYSQLHOST=ballast.proxy.rlwy.net
+MYSQLHOST=shuttle.proxy.rlwy.net
 MYSQLPASSWORD=SUEmtONCNxTWlHYJCKqGjcqpwYYvoErA
-MYSQLPORT=51524
+MYSQLPORT=14497
 MYSQLUSER=root
 
 # CORS (разрешённые источники)
